# fast_qr

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  rust.yml
fast-qr-cli/: Cargo.toml
fast-qr-cli/src/: main.rs
fast-qr-reworked/: Cargo.toml
fast-qr-reworked/src/: compact.rs  datamasking.rs  default.rs  encode.rs  lib.rs  placement.rs  polynomials.rs  qr.rs  score.rs
fast-qr-reworked/src/convert/: svg.rs
fast-qr-reworked/src/tests/: encode.rs  polynomials.rs  score.rs  structure.rs  svg.rs  version.rs
fast-qr-reworked/tests/: e2e_roundtrip.rs  raw_matrix_roundtrip.rs
fast-qr-reworked/tests/common/: mod.rs
fast-qr-wasm/: Cargo.toml  package-lock.json  package.json
fast-qr-wasm/src/: lib.rs
src/: lib.rs  qr.rs
src/convert/: mod.rs  svg.rs
