[package]
name = "fast_qr"
version = "0.13.1"
authors = ["erwan.vivien <erwan.vivien@epita.fr>"]
edition = "2021"
description = "Generates optimized QRCode"
documentation = "https://docs.rs/fast_qr/latest/fast_qr/"
homepage = "https://fast-qr.com/"
readme = "README.md"
repository = "https://github.com/erwanvivien/fast_qr/"
keywords = ["qr", "qrcode", "qr-generator", "qrcode-generator", "qr-gen"]
categories = ["multimedia", "multimedia::encoding", "multimedia::images"]
include = ["src", "Cargo.toml", "README.md", "LICENSE"]
rust-version = "1.59"
license = "MIT"
autobenches = false
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["fast-qr-wasm"]

[profile.release]
debug = false
lto = true
codegen-units = 1
opt-level = 's'     # Optimize for size
panic = 'abort'     # About unwinding code
strip = "debuginfo"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
