[package]
name = "fast-qr-cli"
version.workspace = true
description = "Command-line QR encoder built on fast-qr-reworked."
license = "MIT"
edition = "2024"

[dependencies]
fast-qr-reworked = { path = "../fast-qr-reworked" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
png = "0.17"
